--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,10 @@ jobs:
         run: npx playwright install chromium
 
       - name: Build portable (zip)
-        run: npm run build
+        run: npx electron-builder --win portable --publish never
 
       - name: Build installer (NSIS)
-        run: npm run build:installer
+        run: npx electron-builder --win nsis --publish never
 
       - name: Upload portable artifact
         uses: actions/upload-artifact@v4
